// <auto-generated> This file has been auto generated by EF Core Power Tools. </auto-generated>
#nullable disable
using System;
using System.Collections.Generic;
using System.ComponentModel.DataAnnotations;
using System.ComponentModel.DataAnnotations.Schema;
using Microsoft.EntityFrameworkCore;

namespace Examination_system.Models;

public partial class course
{
    [Key]
    public int course_id { get; set; }

    public int? course_code { get; set; }

    [StringLength(255)]
    [Unicode(false)]
    public string description { get; set; }

    [StringLength(255)]
    [Unicode(false)]
    public string course_title { get; set; }

    [StringLength(255)]
    [Unicode(false)]
    public string credits { get; set; }

    [InverseProperty("course")]
    public virtual ICollection<course_questions_on_topic> course_questions_on_topics { get; set; } = new List<course_questions_on_topic>();

    [InverseProperty("course")]
    public virtual ICollection<instructor_generate_course_exam> instructor_generate_course_exams { get; set; } = new List<instructor_generate_course_exam>();

    [InverseProperty("course")]
    public virtual ICollection<student_course> student_courses { get; set; } = new List<student_course>();

    [ForeignKey("course_id")]
    [InverseProperty("courses")]
    public virtual ICollection<department> departments { get; set; } = new List<department>();

    [ForeignKey("course_id")]
    [InverseProperty("courses")]
    public virtual ICollection<instructor> instructors { get; set; } = new List<instructor>();
}