erDiagram
    Branch {
        int branch_id PK
        varchar branch_name
        varchar branch_city
    }
    Department {
        int department_id PK
        varchar department_name
    }
    Course {
        int course_id PK
        int course_code
        varchar description
        varchar course_title
        varchar credits
    }
    Topic {
        int topic_id PK
        int topic_order
        varchar topic_duration
        varchar topic_title
    }
    Exam {
        int exam_id PK
        varchar exam_title
        int total_grade
        datetime exam_date
        varchar exam_type
        int duration_mins
    }
    QuestionChoice {
        int choice_id PK
        varchar choice_text
    }
    Question {
        int question_id PK
        varchar question_text
        varchar question_type
        varchar question_difficulty
        int correct_ans_id FK
    }
    Person {
        int person_id PK
        varchar first_name
        varchar last_name
        varchar email
    }
    Student {
        int student_id PK,FK
    }
    Instructor {
        int instructor_id PK,FK
        date hire_date
    }
    
    %% Junction Tables
    BranchDepartment {
        int branch_id PK,FK
        int department_id PK,FK
    }
    DepartmentCourse {
        int course_id PK,FK
        int department_id PK,FK
    }
    ExamQuestion {
        int exam_id PK,FK
        int question_id PK,FK
    }
    QuestionChoiceBridge {
        int question_id PK,FK
        int choice_id PK,FK
    }
    StudentExam {
        int student_id PK,FK
        int exam_id PK,FK
        varchar state
        datetime exam_date
        int grade
    }
    StudentCourse {
        int student_id PK,FK
        int course_id PK,FK
        datetime enrollment_date
    }
    InstructorCourse {
        int instructor_id PK,FK
        int course_id PK,FK
    }
    PersonJoinDepartmentBranch {
        int person_id PK,FK
        int branch_id FK
        int department_id FK
        datetime join_date PK
    }
    InstructorGenerateCourseExam {
        int instructor_id PK,FK
        int exam_id FK
        int course_id PK,FK
        datetime generate_date PK
    }
    CourseQuestionTopic {
        int course_id PK,FK
        int question_id PK,FK
        int topic_id PK,FK
    }
    StudentAnswerQuestion {
        int student_id PK,FK
        int exam_id FK
        int question_id PK,FK
        varchar student_answer
        datetime answer_date PK
    }

    %% Relationships
    Branch ||--o{ BranchDepartment : has
    Department ||--o{ BranchDepartment : "belongs to"
    
    Department ||--o{ DepartmentCourse : offers
    Course ||--o{ DepartmentCourse : "belongs to"

    Exam ||--o{ ExamQuestion : contains
    Question ||--o{ ExamQuestion : "part of"

    Question ||--o{ QuestionChoiceBridge : has
    QuestionChoice ||--o{ QuestionChoiceBridge : "is option for"

    Question ||--o| QuestionChoice : "correct answer"

    Person ||--o| Student : is
    Person ||--o| Instructor : is

    Student ||--o{ StudentExam : takes
    Exam ||--o{ StudentExam : "taken by"

    Student ||--o{ StudentCourse : enrolls
    Course ||--o{ StudentCourse : "enrolled by"

    Instructor ||--o{ InstructorCourse : teaches
    Course ||--o{ InstructorCourse : "taught by"

    Person ||--o{ PersonJoinDepartmentBranch : joins
    Branch ||--o{ PersonJoinDepartmentBranch : "staffed by"
    Department ||--o{ PersonJoinDepartmentBranch : "staffed by"

    Instructor ||--o{ InstructorGenerateCourseExam : generates
    Exam ||--o{ InstructorGenerateCourseExam : generated
    Course ||--o{ InstructorGenerateCourseExam : "for course"

    Course ||--o{ CourseQuestionTopic : links
    Question ||--o{ CourseQuestionTopic : links
    Topic ||--o{ CourseQuestionTopic : links

    Student ||--o{ StudentAnswerQuestion : answers
    Exam ||--o{ StudentAnswerQuestion : "in exam"
    Question ||--o{ StudentAnswerQuestion : "answers question"
